# wikiMainPath

./: .gitignore  .gitmodules  Backend_REST_Specification.md  LICENSE  README.md
src/: CMakeLists.txt  main_big_int_test.cpp  mpaComputation
src/backend/: filters.cpp  filters.h  fullTextSearch.cpp  fullTextSearch.h  main_backend.cpp  main_backend_test.cpp  main_backend_test2.cpp  main_manuallyComputeNetwork.cpp  mpaHandlerFactory.cpp  mpaHandlerFactory.h  mpaRequestHandler.cpp  mpaRequestHandler.h  notFoundHandler.cpp  notFoundHandler.h  requestParameters.h  routingHandlerFactory.cpp  routingHandlerFactory.h  searchCategoryHandler.cpp  searchCategoryHandler.h  serverApplication.h  serverData.cpp  serverData.h  serverDataCache.cpp  serverDataCache.h
src/backend/graphDrawing/: averagedPrecessorGraphDrawing.cpp  averagedPrecessorGraphDrawing.h  forceDirectedFunctors.cpp  forceDirectedFunctors.h  forceDirectedGraphDrawing.cpp  forceDirectedGraphDrawing.h  randomGraphDrawing.cpp  randomGraphDrawing.h
src/backend/httpRequestHandlers/: articleListHandler.cpp  articleListHandler.h  articleNetworkHandler.cpp  articleNetworkHandler.h  categorySearchHandler.cpp  categorySearchHandler.h  eventNetworkHandler.cpp  eventNetworkHandler.h  mpaHandler.cpp  mpaHandler.h  mpaRequestHandler.cpp  mpaRequestHandler.h  searchCategoryHandler.cpp  searchCategoryHandler.h  searchHandler.cpp  searchHandler.h
src/backend/tests/: forceDirectedGraphDrawingTests.cpp  main_backendTests.cpp
src/core/: adaptDate.h  adaptTmStruct.h  buildOneCategoryRecursively.cpp  buildOneCategoryRecursively.h  date.cpp  date.h  dateDifference.cpp  dateDifference.h  graph.h  main_viewCategoryHirachy.cpp  wikiDataCache.cpp  wikiDataCache.h
src/parsers/: fileNames.h  main_buildArticleNetwork.cpp  main_buildCategoryLists.cpp  main_countArticleLengths.cpp  main_countPages.cpp  main_extractTitlesAndDates.cpp  main_s1_2_sortArticleAndCategories.cpp  main_s1_articlesAndCategories.cpp  main_s2_categoryHasArticles.cpp  main_s2_sortArticleAndCategories.cpp  main_s3_articleNetwork.cpp  main_s3_parseAllLinks.cpp  main_s3_recursiveCategories.cpp  main_s4_articleNetwork.cpp  main_s4_manualRecursiveCategories.cpp  main_s5_eventComputations.cpp  main_s6_writeDataToMysql.cpp  main_s7_parseAllLinks.cpp  main_testVectorMutex.cpp  main_testVectorMutex2.cpp  main_tests.cpp  s3_cycle_detector_visitor.cpp  shared.cpp  shared.h  sortTitlesHelper.cpp
src/parsers/articleNetwork/: articleGraph.h  articleGraphIo.cpp  articleGraphIo.h  date.cpp  date.h  dateExtractor.cpp  dateExtractor.h  linkListExtractor.cpp  linkListExtractor.h
src/parsers/date/: articleDateExtraction.cpp  articleDateExtraction.h  date.cpp  date.h  dateExtraction.cpp  dateExtraction.h  dateExtractor.cpp  dateExtractor.h  dateStringGrammar.cpp  dateStringGrammar.hpp  dateStringGrammar_def.hpp  infoboxDateExtraction.cpp  infoboxDateExtraction.h  infoboxGrammar.cpp  infoboxGrammar.hpp  infoboxGrammar_def.hpp  infoboxKeyValueGrammar.hpp  infoboxKeyValueGrammar_def.hpp  stringDateExtraction.cpp  stringDateExtraction.h  wikiDateTemplateGrammar.hpp  wikiDateTemplateGrammar_def.hpp
src/parsers/date/grammars/: dateStringGrammar.hpp  dateStringGrammar_def.hpp  infoboxKeyValueGrammar.cpp  plainYearGrammar.cpp  plainYearGrammar.hpp  plainYearGrammar_def.hpp  (+6 more)
src/parsers/helpers/: buildCategoryHirachyRecursively.cpp  buildCategoryHirachyRecursively.h  buildRecursiveCategories.cpp  cycleDetectorVisitor.cpp  cycleDetectorVisitor.h  printProgress.cpp  printProgress.h  removeCyclesInCategoryHirachy.cpp  removeCyclesInCategoryHirachy.h  s3_cycle_detector_visitor.h  shared.cpp  shared.h  sortTitlesHelper.h
src/parsers/parserWrappers/: s1_wrapper.cpp  s1_wrapper.h  s2_wrapper.h  s3_recursiveFillCategories.cpp  s3_recursiveFillCategories.h  s3_wrapper.h  s4_wrapper.cpp  s4_wrapper.h
src/parsers/tests/: articleListTests.cpp  articleNetworkTests.cpp  categoryTests.cpp  cycleDectionTests.cpp  dateTests.cpp  fileListDataset.hpp  main_parserTests.cpp  main_tests.cpp
src/parsers/wikiArticleHandlers/: allLinksArticleHandler.cpp  allLinksArticleHandler.h  articleDatesAndCategoriesHandler.cpp  articleDatesAndCategoriesHandler.h  articleTitlesHandler.cpp  articleTitlesHandler.h  categoryHasArticleHandler.cpp  categoryHasArticleHandler.h  categoryRecursiveHandler.h  countArticleLengthsHandler.cpp  countArticleLengthsHandler.h  linkExtractionHandler.cpp  linkExtractionHandler.h
src/parsers/wikiHandlers/: articleDatesAndCategoriesHandler.cpp  articleDatesAndCategoriesHandler.h  articleTitlesHandler.cpp  articleTitlesHandler.h  categoryHasArticleHandler.cpp  categoryHasArticleHandler.h  categoryRecursiveHandler.cpp  categoryRecursiveHandler.h  linkExtractionHandler.cpp  linkExtractionHandler.h  vectorMutex.hpp
src/parsers/xercesHandlers/: abstractArticleHandler.h
src/parsers/xml/: articleData.h  countPagesHandler.cpp  countPagesHandler.h  wikiDumpHandler.cpp  wikiDumpHandler.h
src/phpExtension/: Makefile  wikiMainPath.cpp  wikiMainPath.ini
src/phpExtensionExample/: Makefile  testextension.cpp
src/program/: fullTextSearch.cpp  main_programm.cpp  main_programm2.cpp  readDataFromFile.h
src/webapp/: index.css  index.html  listArticlesInCategory.php  package.json  searchQuery.php  systemjs.config.js
src/webapp/app/: app.component.ts  app.module.ts  global.component.ts  index.html  network.component.ts  networkDisplay.component.ts  searchBar.component.ts  searchQuery.service.ts  sidebarInformation.component.ts  systemjs.config.js
src/webapp/css/: styles.css
src/webapp/templates/: global.html  search_category.html
src/webapp2/: README.md  angular.json  bs-config.json  index.html  package-lock.json  package.json  server.js  tsconfig.json
src/webapp2/app/: app.module.ts  dataTypes.ts  global.component.ts  network.component.ts  networkDisplay.component.ts  searchBar.component.ts  searchQuery.service.ts  sidebarInformation.component.ts
src/webapp2/css/: styles.css
src/webapp2/src/: index.html  styles.css
src/webapp2/templates/: global.html  search_category.html
(+92 files in other folders)
